# bmp-processor

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md  linter
include/filters/: crop.h  edge_detection.h  filter.h  gaussian_blur.h  grayscale.h  motion_blur.h  negative.h  sharpening.h
include/io/: bmp.h
include/utility/: args.h  image.h  matrix.h
src/: main.cpp
src/io/: bmp.cpp
src/utility/: args.cpp  image.cpp
